--- a/SpecificationDemo.UnitTests/SpecificationDemo.UnitTests.csproj
+++ b/SpecificationDemo.UnitTests/SpecificationDemo.UnitTests.csproj
@@ -21,4 +21,14 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="AutoFixture">
+        <HintPath>..\..\..\..\..\.nuget\packages\autofixture\4.18.0\lib\netstandard2.0\AutoFixture.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SpecificationDemo\SpecificationDemo.csproj" />
+    </ItemGroup>
+
 </Project>
