--- a/SpecificationDemo/SpecificationDemo.csproj
+++ b/SpecificationDemo/SpecificationDemo.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoFixture" Version="4.18.0" />
+      <PackageReference Include="FluentAssertions" Version="6.10.0" />
+    </ItemGroup>
+
 </Project>
